--- a/IDServerandASPIdentity/Views/Shared/_ForgotPassword.cshtml
+++ b/IDServerandASPIdentity/Views/Shared/_ForgotPassword.cshtml
@@ -2,76 +2,84 @@
 
 <div class="modal-dialog" role="document">
     <div class="modal-content">
-        
+        <form id="forgotpassword">
+            <input type="hidden" class="form-control" asp-for="TenantId">
+            <input type="hidden" class="form-control" asp-for="ConfirmationMessage">
             <div class="modal-header">
+
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title">Forgot your password?</h4>
             </div>
-            <div style="display:none" id="successMsg">
-                <label>Email will be sent to the user with Code to Reset password.</label>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            </div>
 
-            <div style="display:block" class="modal-body id="formDiv">
 
-                <div class="form-horizontal ">
-                    <p class="text-center">Please enter your email address to reset password. We will send you a link shortly.</p>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <label for="Email" class="col-md-2 control-label">Email</label>
-                            <div class="col-md-10">
-                                <!--<input type="text" class="form-control" id="Email" placeholder="Email">-->
-                                <input type="text" class="form-control" placeholder="Email" asp-for="Email" autofocus>
+            <div style="display:block" class="modal-body">
+                <div style="display:none" id="successMsg">
+                    <label>Email will be sent to the user with Code to Reset password.</label>
+                </div>
+                <div id="formDiv">
+                    <div class="form-horizontal ">
+                        <p class="text-center">Please enter your email address to reset password. We will send you a link shortly.</p>
+                        <div class="form-group">
+                            <div class="col-md-12">
+                                <label for="Email" class="col-md-2 control-label">Email</label>
+                                <div class="col-md-10">
+                                    <!--<input type="text" class="form-control" id="Email" placeholder="Email">-->
+                                    <input type="text" class="form-control" placeholder="Email" asp-for="Email" autofocus>
+                                </div>
                             </div>
-                        </div>
-                        <div class="alert alert-warning">
-                            <label id="Error"></label>
+                            <div class="alert alert-warning">
+                                <label id="Error"></label>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="modal-footer text-center">
+                    <span id="btnSave">
+                        <button id="btnsave" type="button" class="btn btn-primary">Send</button>
+                    </span>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                </div>
             </div>
-            <div class="modal-footer text-center">
-                <button id="btnsave" type="button" class="btn btn-primary">Send</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            </div>
-       
+        </form>
     </div>
 </div>
 
-@section scripts {
-    <script type="text/javascript">
 
-        window.jQuery(document).ready(function () {
-            $("#btnsave").on('click', function () {
+<script src="~/lib/jquery/jquery.js"></script>
+<script src="~/lib/bootstrap/js/bootstrap.js"></script>
 
+<script>
+    window.jQuery(document).ready(function () {
+    $("#btnsave").on('click', function () {
+    var forgotPasswordViewModel = { Email: $('#Email').val(), TenantId: $('#TenantId').val(), ReturnUrl: $('#ReturnUrl').val(), ConfirmationMessage: $('#ConfirmationMessage').val() };
+    var data = JSON.stringify(forgotPasswordViewModel);
+    debugger;
+    $.ajax({
+    url: "/User/ForgotPasswordPartial",
+    type: "POST",
+    processData: false,
+    contentType: "application/json; charset:utf-8",
+    dataType: "json",
+    data: data,
+    success: function (response) {
+    if (response == "EmailNotFound" || response == "Done") {
+        $("#successMsg").show();
+        $("#btnSave").hide();
+    $("#formDiv").hide();
+    };
+    },
+    error: function (er) {
 
-                var frm = $("form");
-                var data = new FormData($("form")[0]);
-                debugger;
-                $.ajax({
-                    url: '/User/ForgotPasswordPartial',
-                    type: "POST",
-                    processData: false,
-                    data: data,
-                    dataType: 'json',
-                    contentType: false,
-                    success: function (response) {
-                        if (response == "EmailNotFound" || response == "Done") {
-                            $("#successMsg").show();
-                            $("#formDiv").hide();
-                        };
-                    },
-                    error: function (er) {
-
-                        $("#successMsg").hide();
-                        $("#formDiv").show();
-                        $("#Error").val("Some Error has occured");
-                    }
-                });
-                return false;
-            });
-
-        });
-    </script>
+    $("#successMsg").hide();
+        $("#formDiv").show();
+        $("#btnSave").show();
+    $("#Error").val("Some Error has occured");
     }
+    });
+    return false;
+    });
+
+    });
+</script>
+
 
